<?xml version="1.0"?>
<package format="3">
    <name>maxon_epos_msgs</name>
    <version>0.0.0</version>
    <description>The maxon_epos_msgs package</description>

    <maintainer email="taross0524.ss@gmail.com">Ryutaro Matsumoto</maintainer>


    <license>MIT</license>


    <author email="taross0524.ss@gmail.com">Ryutaro Matsumoto</author>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <build_depend>rosidl_default_generators</build_depend>

    <build_depend>message_generation</build_depend>
    <exec_depend>rosidl_default_runtime</exec_depend>

    <member_of_group>rosidl_interface_packages</member_of_group>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
